# dav_pracs

./: README.md  main.py  pyproject.toml
src/: arima.ipynb  linreg.ipynb  logreg.ipynb  multireg.ipynb  python_vis.ipynb  sentiment.ipynb  spam_filter.ipynb  timeseries.ipynb  wordcloud.ipynb
